--- a/samples/Samples.Blazor/Samples.Blazor/Client/_Imports.razor
+++ b/samples/Samples.Blazor/Samples.Blazor/Client/_Imports.razor
@@ -3,6 +3,7 @@
 // Licensed under the MIT License.
 *@
 
+@using System.Linq
 @using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
