--- a/samples/TodoApp/TodoApp.Uno/TodoApp.Uno/MainPage.xaml
+++ b/samples/TodoApp/TodoApp.Uno/TodoApp.Uno/MainPage.xaml
@@ -9,48 +9,68 @@
 	  mc:Ignorable="d"    
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<!--<NavigationPage.TitleView>
-		<StackLayout Style="{StaticResource titleViewContainer}">
-			<Label Style="{StaticResource titleViewLabel}">TodoApp</Label>
-			<ImageButton Style="{StaticResource titleViewRefreshIcon}"
-						 Command="{Binding RefreshItemsCommand}" />
-		</StackLayout>
-	</NavigationPage.TitleView>-->
+	<Grid x:Name="mainContainer"
+		  Loaded="GridLoadedEventHandler">
+		<Grid.Resources>
+			<local:BoolToVisibilityConverter x:Key="vis" />
+		</Grid.Resources>
 
-	<Grid Background="Azure">
 		<Grid.RowDefinitions>
+			<RowDefinition Height="10" />
 			<RowDefinition Height="*" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 
-		<!-- List of items -->
-		<ListView ItemsSource="{Binding Items}">
-			<!--ItemTapped="OnListItemTapped">-->
-			<ListView.ItemTemplate>
-				<DataTemplate x:DataType="data:TodoItem">
-						<Grid >
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*" />
-								<ColumnDefinition Width="Auto" />
-							</Grid.ColumnDefinitions>
+		<ProgressBar x:Name="isRefreshingControl"
+					 IsEnabled="{Binding IsRefreshing}"
+					 IsIndeterminate="True"
+					 Visibility="{Binding Path=IsRefreshing, Converter={StaticResource vis}}" />
 
-							<TextBlock Text="{Binding Title}" />
-						<Image Grid.Column="1" />
-						<!--IsVisible="{Binding IsComplete}"/>-->
-						</Grid>
+		<ListView x:Name="itemListControl"
+				  Grid.Row="1"
+				  Margin="10"
+				  ItemsSource="{Binding Items}"
+				  ScrollViewer.VerticalScrollBarVisibility="Auto">
+			<ListView.ItemTemplate>
+				<DataTemplate>
+					<CheckBox Margin="10"
+							  Click="CheckboxClickHandler"
+							  Content="{Binding Title}"
+							  IsChecked="{Binding IsComplete}"
+							  Tag="{Binding Id}" />
 				</DataTemplate>
 			</ListView.ItemTemplate>
 		</ListView>
 
-		<!-- Entry box -->
-		<Grid Grid.Row="1" Grid.ColumnDefinitions="Auto,*">
-			<Image />
-			<!--Style="{StaticResource addItemIcon}" />-->
-			<TextBox x:Name="addItemEntry"
-					 Grid.Column="1"
-					 PlaceholderText="Enter Todo Item Text" />
-			<!--Command="{Binding AddItemCommand}"
-					   CommandParameter="{Binding Source={x:Reference addItemEntry}}" />-->
+		<Grid Grid.Row="2"
+			  Margin="10">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*" />
+				<ColumnDefinition Width="Auto" />
+				<ColumnDefinition Width="Auto" />
+			</Grid.ColumnDefinitions>
+			<TextBox x:Name="textboxControl"
+					 Background="Transparent"
+					 BorderBrush="Indigo"
+					 FontSize="20"
+					 KeyDown="TextboxKeyDownHandler"
+					 PlaceholderText="Enter new todo item" />
+			<Button Grid.Column="1"
+					Margin="4"
+					Click="AddItemClickHandler"
+					Background="#FFD0D0D0">
+				<Image Width="24"
+					   Height="24"
+					   Source="Assets/additem.png" />
+			</Button>
+			<Button Grid.Column="2"
+					Margin="4"
+					Click="RefreshItemsClickHandler"
+					Background="#FFD0D0D0">
+				<Image Width="24"
+					   Height="24"
+					   Source="Assets/refresh.png" />
+			</Button>
 		</Grid>
 	</Grid>
 </Page>
