--- a/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Base/AppHead.xaml
+++ b/samples/TodoApp/TodoApp.Uno/TodoApp.Uno.Base/AppHead.xaml
@@ -1,21 +1,17 @@
-<local:App
-	x:Class="TodoApp.Uno.AppHead"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TodoApp.Uno">
-	
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+<local:App x:Class="TodoApp.Uno.AppHead"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:wasm="http://platform.uno/wasm"
+			 xmlns:local="using:TodoApp.Uno"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 mc:Ignorable="wasm">
 
+	<local:App.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="ms-appx:///TodoApp.Uno/AppResources.xaml" />
-				
-                <!-- Include additional resource dictionaries here, or in TodoApp.Uno/AppResources.xaml -->				
 			</ResourceDictionary.MergedDictionaries>
-			
-			<!-- Include additional resources here, or in TodoApp.Uno/AppResources.xaml -->
-        </ResourceDictionary>
-    </Application.Resources>
+		</ResourceDictionary>
+	</local:App.Resources>
 
 </local:App>
